--- a/index.html
+++ b/index.html
@@ -26,43 +26,124 @@
 
         <!-- Home Page -->
         <div id="homePage" class="page active">
+            <!-- Hero Section -->
             <div class="hero-section">
                 <div class="hero-content">
                     <h2>Welcome to QuizMaster</h2>
-                    <p>Test your knowledge and improve your skills</p>
+                    <p>Test your knowledge and improve your skills with interactive quizzes</p>
                     <div class="hero-buttons">
                         <button class="btn btn-primary" onclick="showLoginPage()">Login</button>
                         <button class="btn btn-secondary" onclick="showSignupPage()">Sign Up</button>
                     </div>
                 </div>
                 <div class="hero-image">
-                    <div class="quiz-icon">🎯</div>
+                    <svg class="hero-svg" viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg">
+                        <!-- Lightbulb (Idea) -->
+                        <g transform="translate(200, 150)">
+                            <circle cx="0" cy="-30" r="30" fill="#FFD700" stroke="#667eea" stroke-width="2"/>
+                            <rect x="-15" y="0" width="30" height="40" fill="#FFD700" stroke="#667eea" stroke-width="2" rx="5"/>
+                            <rect x="-20" y="40" width="40" height="8" fill="#667eea" stroke="#667eea" stroke-width="1"/>
+                            <rect x="-18" y="50" width="36" height="6" fill="#667eea" stroke="#667eea" stroke-width="1"/>
+                            <rect x="-16" y="58" width="32" height="6" fill="#667eea" stroke="#667eea" stroke-width="1"/>
+                        </g>
+                        
+                        <!-- Decorative circles -->
+                        <circle cx="80" cy="100" r="15" fill="#667eea" opacity="0.3"/>
+                        <circle cx="320" cy="280" r="20" fill="#764ba2" opacity="0.3"/>
+                        <circle cx="100" cy="300" r="12" fill="#ec4899" opacity="0.2"/>
+                        
+                        <!-- Animated elements -->
+                        <g class="floating-element">
+                            <path d="M 320 100 L 330 110 L 320 120 L 310 110 Z" fill="#667eea" opacity="0.6"/>
+                        </g>
+                    </svg>
                 </div>
             </div>
 
+            <!-- Features Section -->
             <div class="features-section">
                 <h3>Why Choose QuizMaster?</h3>
                 <div class="features-grid">
                     <div class="feature-card">
-                        <div class="feature-icon">⚡</div>
+                        <div class="feature-icon">
+                            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="icon-svg">
+                                <!-- Lightning bolt for Speed -->
+                                <polygon points="50,10 65,40 95,40 65,70 80,100 50,70 20,70 50,40 20,40" fill="#667eea"/>
+                            </svg>
+                        </div>
                         <h4>Fast & Easy</h4>
-                        <p>Create and take quizzes in seconds</p>
+                        <p>Create and take quizzes in seconds with our intuitive platform</p>
                     </div>
                     <div class="feature-card">
-                        <div class="feature-icon">📊</div>
+                        <div class="feature-icon">
+                            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="icon-svg">
+                                <!-- Chart for Progress -->
+                                <rect x="15" y="70" width="15" height="15" fill="#10b981"/>
+                                <rect x="35" y="50" width="15" height="35" fill="#10b981"/>
+                                <rect x="55" y="30" width="15" height="55" fill="#10b981"/>
+                                <rect x="75" y="10" width="15" height="75" fill="#10b981"/>
+                                <line x1="10" y1="85" x2="95" y2="85" stroke="#666" stroke-width="2"/>
+                            </svg>
+                        </div>
                         <h4>Track Progress</h4>
-                        <p>Monitor your scores and improvements</p>
+                        <p>Monitor your scores and see improvements over time</p>
                     </div>
                     <div class="feature-card">
-                        <div class="feature-icon">🔒</div>
-                        <h4>Secure</h4>
-                        <p>Your data is safe and protected</p>
+                        <div class="feature-icon">
+                            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="icon-svg">
+                                <!-- Lock for Security -->
+                                <rect x="25" y="45" width="50" height="40" fill="none" stroke="#ef4444" stroke-width="3" rx="5"/>
+                                <rect x="35" y="35" width="30" height="15" fill="none" stroke="#ef4444" stroke-width="3" rx="5"/>
+                                <circle cx="50" cy="65" r="5" fill="#ef4444"/>
+                            </svg>
+                        </div>
+                        <h4>Secure & Safe</h4>
+                        <p>Your data is encrypted and protected with industry standards</p>
                     </div>
                     <div class="feature-card">
-                        <div class="feature-icon">📱</div>
+                        <div class="feature-icon">
+                            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="icon-svg">
+                                <!-- Mobile Phone -->
+                                <rect x="20" y="10" width="60" height="80" fill="none" stroke="#f59e0b" stroke-width="3" rx="8"/>
+                                <rect x="25" y="15" width="50" height="60" fill="#f0f0f0"/>
+                                <circle cx="50" cy="85" r="4" fill="#f59e0b"/>
+                            </svg>
+                        </div>
                         <h4>Mobile Friendly</h4>
-                        <p>Works on all devices seamlessly</p>
+                        <p>Access quizzes seamlessly on any device, anytime</p>
                     </div>
+                </div>
+            </div>
+
+            <!-- Stats Section -->
+            <div class="stats-showcase">
+                <h3>Join Thousands of Learners</h3>
+                <div class="stats-row">
+                    <div class="stat-box">
+                        <div class="stat-number">10K+</div>
+                        <div class="stat-text">Active Users</div>
+                    </div>
+                    <div class="stat-box">
+                        <div class="stat-number">500+</div>
+                        <div class="stat-text">Quizzes Available</div>
+                    </div>
+                    <div class="stat-box">
+                        <div class="stat-number">50K+</div>
+                        <div class="stat-text">Tests Completed</div>
+                    </div>
+                    <div class="stat-box">
+                        <div class="stat-number">98%</div>
+                        <div class="stat-text">Satisfaction Rate</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Call to Action Section -->
+            <div class="cta-section">
+                <div class="cta-content">
+                    <h3>Ready to Test Your Knowledge?</h3>
+                    <p>Join thousands of students and professionals improving their skills</p>
+                    <button class="btn btn-primary btn-lg" onclick="showSignupPage()">Get Started Now</button>
                 </div>
             </div>
         </div>
@@ -149,44 +230,92 @@
         <div id="dashboardPage" class="page">
             <div class="dashboard-container">
                 <div class="dashboard-header">
-                    <h2>Your Dashboard</h2>
-                    <p id="dashboardUser">Welcome, User!</p>
+                    <h2>Admin Dashboard</h2>
+                    <p id="dashboardUser">Platform Overview & Statistics</p>
                 </div>
 
                 <div class="dashboard-content">
-                    <div class="stats-grid">
-                        <div class="stat-card">
-                            <div class="stat-icon">✅</div>
-                            <div class="stat-info">
-                                <p>Total Quizzes</p>
-                                <h3 id="totalQuizzes">0</h3>
+                    <!-- Platform Statistics -->
+                    <div class="admin-stats-section">
+                        <h3>Platform Statistics</h3>
+                        <div class="stats-grid">
+                            <div class="stat-card">
+                                <div class="stat-icon">👥</div>
+                                <div class="stat-info">
+                                    <p>Total Users</p>
+                                    <h3 id="totalUsers">0</h3>
+                                </div>
                             </div>
-                        </div>
-                        <div class="stat-card">
-                            <div class="stat-icon">⭐</div>
-                            <div class="stat-info">
-                                <p>Average Score</p>
-                                <h3 id="averageScore">0%</h3>
+                            <div class="stat-card">
+                                <div class="stat-icon">📝</div>
+                                <div class="stat-info">
+                                    <p>Total Quizzes</p>
+                                    <h3 id="totalQuizzesAdmin">0</h3>
+                                </div>
                             </div>
-                        </div>
-                        <div class="stat-card">
-                            <div class="stat-icon">🏆</div>
-                            <div class="stat-info">
-                                <p>Best Score</p>
-                                <h3 id="bestScore">0%</h3>
+                            <div class="stat-card">
+                                <div class="stat-icon">✅</div>
+                                <div class="stat-info">
+                                    <p>Tests Completed</p>
+                                    <h3 id="testsCompleted">0</h3>
+                                </div>
                             </div>
-                        </div>
-                        <div class="stat-card">
-                            <div class="stat-icon">📈</div>
-                            <div class="stat-info">
-                                <p>Total Points</p>
-                                <h3 id="totalPoints">0</h3>
+                            <div class="stat-card">
+                                <div class="stat-icon">⭐</div>
+                                <div class="stat-info">
+                                    <p>Avg Platform Score</p>
+                                    <h3 id="avgPlatformScore">0%</h3>
+                                </div>
                             </div>
                         </div>
                     </div>
 
+                    <!-- User Performance Section -->
+                    <div class="admin-performance-section">
+                        <h3>Your Personal Stats</h3>
+                        <div class="stats-grid">
+                            <div class="stat-card">
+                                <div class="stat-icon">🎯</div>
+                                <div class="stat-info">
+                                    <p>Your Quizzes Taken</p>
+                                    <h3 id="userQuizzesTaken">0</h3>
+                                </div>
+                            </div>
+                            <div class="stat-card">
+                                <div class="stat-icon">⭐</div>
+                                <div class="stat-info">
+                                    <p>Your Avg Score</p>
+                                    <h3 id="userAvgScore">0%</h3>
+                                </div>
+                            </div>
+                            <div class="stat-card">
+                                <div class="stat-icon">🏆</div>
+                                <div class="stat-info">
+                                    <p>Your Best Score</p>
+                                    <h3 id="userBestScore">0%</h3>
+                                </div>
+                            </div>
+                            <div class="stat-card">
+                                <div class="stat-icon">💰</div>
+                                <div class="stat-info">
+                                    <p>Your Total Points</p>
+                                    <h3 id="userTotalPoints">0</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Quiz Information Section -->
+                    <div class="quiz-info-section">
+                        <h3>Quiz Categories & Details</h3>
+                        <div class="quiz-info-grid" id="quizInfoGrid">
+                            <!-- Quiz info cards will be loaded here -->
+                        </div>
+                    </div>
+
+                    <!-- Recent Results Section -->
                     <div class="results-section">
-                        <h3>Recent Quiz Results</h3>
+                        <h3>Your Recent Quiz Results</h3>
                         <table class="results-table">
                             <thead>
                                 <tr>
