--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
     <!-- Notification -->
     <div id="notification" class="notification"></div>
 
-    <script src="main.js"></script>
+    <script src="main_new.js"></script>
+
 </body>
 </html>
