--- a/index.html
+++ b/index.html
@@ -420,6 +420,8 @@
     <!-- Notification -->
     <div id="notification" class="notification"></div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="threejs-animation.js"></script>
     <script src="main_new.js"></script>
 
 </body>
